syntax = "proto3";
option go_package = "./types";

import "google/api/annotations.proto";

message StringMessage {
  string value = 1;
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

service HelloService {
    rpc Echo(StringMessage) returns (StringMessage) {
           option (google.api.http) = {
             post: "/v1/example/echo"
             body: "*"
           };
          }
    rpc SayHello (HelloRequest) returns (HelloReply) {
      option (google.api.http) = {
        post: "/v1/example/hello"
        body: "*"
      };
    }
}

